Reimplement clock displays, and warn when clock times run low
This restores some missing functionality by playing sounds when times get
low in a match game.  Also, the clock display now flashes red as well.

The clock display is now a ClockView, derived from QGraphicsView.  The idea
was to have it just as a black bar with white text (and color changes when
warning), and there are some discussions found on-line about how getting
push buttons to look exactly right is not completely portable.  This way,
we have full control.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -6,7 +6,7 @@ q5go_METASOURCES = AUTO
 
 KDE_OPTIONS = qtonly
 
-DISTHEADERS_MOC = audio.h bitarray.h board.h gamedialog.h gamestable.h gametree.h helpviewer.h icons.h \
+DISTHEADERS_MOC = audio.h bitarray.h board.h clockview.h gamedialog.h gamestable.h gametree.h helpviewer.h icons.h \
 	igsconnection.h mainwidget.h mainwindow.h mainwin.h miscdialogs.h \
 	misctools.h normaltools.h scoretools.h parser.h playertable.h preferences.h qgo.h \
 	qgo_interface.h qgtp.h newaigamedlg.h sizegraphicsview.h tables.h telnet.h textview.h tip.h
