--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -76,8 +76,8 @@ am__objects_1 = audio.$(OBJEXT) board.$(OBJEXT) goboard.$(OBJEXT) \
 	playertable.$(OBJEXT) preferences.$(OBJEXT) qgo.$(OBJEXT) \
 	qgo_interface.$(OBJEXT) qgtp.$(OBJEXT) newaigamedlg.$(OBJEXT) \
 	setting.$(OBJEXT) sgfload.$(OBJEXT) sgf2board.$(OBJEXT) \
-	stone.$(OBJEXT) svgbuilder.$(OBJEXT) tables.$(OBJEXT) \
-	telnet.$(OBJEXT) textview.$(OBJEXT)
+	svgbuilder.$(OBJEXT) tables.$(OBJEXT) telnet.$(OBJEXT) \
+	textview.$(OBJEXT)
 am__objects_2 =
 am_q5go_OBJECTS = $(am__objects_1) $(am__objects_2)
 am__objects_3 = audio.moc.$(OBJEXT) bitarray.moc.$(OBJEXT) \
@@ -280,7 +280,7 @@ DISTHEADERS_MOC = audio.h bitarray.h board.h clockview.h gamedialog.h gamestable
 
 DISTHEADERS_NOMOC = goboard.h config.h defines.h grid.h goboard.h gogame.h gs_globals.h \
 	igsinterface.h imagehandler.h komispinbox.h mark.h \
-	misc.h msg_handler.h setting.h sgf.h sgfparser.h stone.h \
+	misc.h msg_handler.h setting.h sgf.h sgfparser.h \
 	svgbuilder.h ui_helpers.h
 
 DISTSOURCES = audio.cpp board.cpp goboard.cc gogame.cc gamedialog.cpp \
@@ -290,7 +290,7 @@ DISTSOURCES = audio.cpp board.cpp goboard.cc gogame.cc gamedialog.cpp \
 		misc.cpp msg_handler.cpp parser.cpp \
 		playertable.cpp preferences.cpp qgo.cpp qgo_interface.cpp qgtp.cpp \
 		newaigamedlg.cpp setting.cpp  sgfload.cc sgf2board.cc \
-		stone.cpp svgbuilder.cpp tables.cpp telnet.cpp textview.cpp
+		svgbuilder.cpp tables.cpp telnet.cpp textview.cpp
 
 FORMS = clientwindow_gui.ui gameinfo_gui.ui gui_dialog.ui mainwidget_gui.ui newgame_gui.ui \
 	newlocalgame_gui.ui newvariantgame_gui.ui normaltools_gui.ui nthmove_gui.ui preferences_gui.ui \
@@ -448,7 +448,6 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/sgf2board.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/sgfload.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/sizegraphicsview.moc.Po@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/stone.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/svgbuilder.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/tables.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/tables.moc.Po@am__quote@
