Replace blue arrow navigation icons.  Also rearrange how they are used.
Make it consistent with the layout of the game tree and the usage of the
arrow keys - up/down now moves through variations, while left/right moves
along the moves of the branch.

--- a/src/pics/Makefile.am
+++ b/src/pics/Makefile.am
@@ -7,17 +7,13 @@ Pics_DATA = barcelona_cherry.jpg birch.jpg eurobeech.jpg \
 noinst_DATA = 1leftarrow.png 1leftarrow.xpm 1leftcomment.png \
 		1leftcomment.xpm	1rightarrow.png 1rightarrow.xpm 1rightcomment.png 1rightcomment.xpm	2leftarrow.png \
 		2leftarrow.xpm 2rightarrow.png 2rightarrow.xpm \
-		bottom.png bottom.xpm Bowl.xpm charset.png	charset.xpm \
-		down.png down.xpm editcut.png \
+		Bowl.xpm charset.png charset.xpm  editcut.png \
 		editcut.xpm editdelete.png	editdelete.xpm editpaste.png editpaste.xpm \
 		filenew.png	filenew.xpm fileopen.png fileopen.xpm filesaveas.png \
 		filesaveas.xpm	filesave.png filesave.xpm help.png help.xpm	idea.png idea.xpm \
 		navIntersection.png	navIntersection.xpm newboard.png \
-		newboard.xpm new_bottom.xpm	new_down.xpm new_start.xpm new_top.xpm new_up.xpm \
-		openterm.png	openterm.xpm package_settings.png \
+		newboard.xpm openterm.png	openterm.xpm package_settings.png \
 		package_settings.xpm	player_pause.png player_pause.xpm qgo.ico qgo.png qgo.xpm \
-		start.png \
-		start.xpm top.png	top.xpm transform.png transform.xpm up.png \
-		up.xpm viewmag-.png	viewmag+.png viewmag-.xpm viewmag+.xpm \
+		transform.png transform.xpm \
 		window_fullscreen.png	window_fullscreen.xpm seeking.gif \
 	coords.xpm sound_off.xpm sound_on.xpm
