Improve navigation button look with larger icon size

--- a/src/pics/Makefile.am
+++ b/src/pics/Makefile.am
@@ -4,15 +4,11 @@ Picsdir = $(datadir)/qGo/pics
 Pics_DATA = barcelona_cherry.jpg birch.jpg eurobeech.jpg \
 	goldenbeech.jpg kaya.png lemontree.jpg manitoba.jpg maple.jpg plain.png synthetic_1.png \
 	synthetic_2.png
-noinst_DATA = 1leftarrow.png 1leftarrow.xpm 1leftcomment.png \
-		1leftcomment.xpm	1rightarrow.png 1rightarrow.xpm 1rightcomment.png 1rightcomment.xpm	2leftarrow.png \
-		2leftarrow.xpm 2rightarrow.png 2rightarrow.xpm \
-		Bowl.xpm charset.png charset.xpm  editcut.png \
+noinst_DATA =	Bowl.xpm charset.png charset.xpm  editcut.png \
 		editcut.xpm editdelete.png	editdelete.xpm editpaste.png editpaste.xpm \
 		filenew.png	filenew.xpm fileopen.png fileopen.xpm filesaveas.png \
 		filesaveas.xpm	filesave.png filesave.xpm help.png help.xpm	idea.png idea.xpm \
-		navIntersection.png	navIntersection.xpm newboard.png \
-		newboard.xpm openterm.png	openterm.xpm package_settings.png \
+		newboard.png newboard.xpm openterm.png	openterm.xpm package_settings.png \
 		package_settings.xpm	player_pause.png player_pause.xpm qgo.ico qgo.png qgo.xpm \
 		transform.png transform.xpm \
 		window_fullscreen.png	window_fullscreen.xpm seeking.gif \
