--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -6,7 +6,7 @@ q5go_METASOURCES = AUTO
 
 KDE_OPTIONS = qtonly
 
-DISTHEADERS_MOC = audio.h bitarray.h board.h clockview.h figuredlg.h gamedialog.h gamestable.h gametree.h \
+DISTHEADERS_MOC = analyzedlg.h audio.h bitarray.h board.h clockview.h figuredlg.h gamedialog.h gamestable.h gametree.h \
 	helpviewer.h icons.h igsconnection.h mainwidget.h mainwindow.h clientwin.h miscdialogs.h \
 	misctools.h msg_handler.h normaltools.h scoretools.h parser.h playertable.h preferences.h qgo.h \
 	qgo_interface.h qgtp.h newaigamedlg.h sizegraphicsview.h tables.h telnet.h textview.h \
@@ -17,7 +17,7 @@ DISTHEADERS_NOMOC = goboard.h config.h defines.h grid.h goboard.h gogame.h gs_gl
 	misc.h setting.h sgf.h sgfparser.h \
 	svgbuilder.h ui_helpers.h
 
-DISTSOURCES = audio.cpp board.cpp clockview.cpp figuredlg.cpp goboard.cc gogame.cc gamedialog.cpp \
+DISTSOURCES = analyzedlg.cpp audio.cpp board.cpp clockview.cpp figuredlg.cpp goboard.cc gogame.cc gamedialog.cpp \
 		gamestable.cpp gametree.cpp grid.cpp helpviewer.cpp \
 		igsconnection.cpp imagehandler.cpp main.cpp \
 		mainwidget.cpp  clientwin.cpp mainwindow.cpp \
@@ -26,9 +26,10 @@ DISTSOURCES = audio.cpp board.cpp clockview.cpp figuredlg.cpp goboard.cc gogame.
 		newaigamedlg.cpp setting.cpp  sgfload.cc sgf2board.cc \
 		svgbuilder.cpp tables.cpp telnet.cpp textview.cpp variantgamedlg.cpp
 
-FORMS = clientwindow_gui.ui figuredlg_gui.ui gameinfo_gui.ui gui_dialog.ui mainwidget_gui.ui newgame_gui.ui \
-	newlocalgame_gui.ui newvariantgame_gui.ui normaltools_gui.ui nthmove_gui.ui preferences_gui.ui \
-	newaigamedlg_gui.ui scoretools_gui.ui svgview_gui.ui talk_gui.ui textedit_gui.ui textview_gui.ui
+FORMS = analyze_gui.ui clientwindow_gui.ui figuredlg_gui.ui gameinfo_gui.ui gui_dialog.ui mainwidget_gui.ui \
+	newgame_gui.ui newlocalgame_gui.ui newvariantgame_gui.ui normaltools_gui.ui nthmove_gui.ui \
+	preferences_gui.ui newaigamedlg_gui.ui scoretools_gui.ui svgview_gui.ui talk_gui.ui textedit_gui.ui \
+	textview_gui.ui
 
 RESOURCES = q4go.qrc
 
