--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -8,13 +8,13 @@ KDE_OPTIONS = qtonly
 
 DISTHEADERS_MOC = audio.h bitarray.h board.h clockview.h figuredlg.h gamedialog.h gamestable.h gametree.h \
 	helpviewer.h icons.h igsconnection.h mainwidget.h mainwindow.h clientwin.h miscdialogs.h \
-	misctools.h normaltools.h scoretools.h parser.h playertable.h preferences.h qgo.h \
+	misctools.h msg_handler.h normaltools.h scoretools.h parser.h playertable.h preferences.h qgo.h \
 	qgo_interface.h qgtp.h newaigamedlg.h sizegraphicsview.h tables.h telnet.h textview.h \
 	variantgamedlg.h
 
 DISTHEADERS_NOMOC = goboard.h config.h defines.h grid.h goboard.h gogame.h gs_globals.h \
 	igsinterface.h imagehandler.h komispinbox.h mark.h \
-	misc.h msg_handler.h setting.h sgf.h sgfparser.h \
+	misc.h setting.h sgf.h sgfparser.h \
 	svgbuilder.h ui_helpers.h
 
 DISTSOURCES = audio.cpp board.cpp clockview.cpp figuredlg.cpp goboard.cc gogame.cc gamedialog.cpp \
