--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -67,28 +67,29 @@ CONFIG_CLEAN_FILES =
 CONFIG_CLEAN_VPATH_FILES =
 am__installdirs = "$(DESTDIR)$(bindir)"
 PROGRAMS = $(bin_PROGRAMS)
-am__objects_1 = audio.$(OBJEXT) board.$(OBJEXT) clockview.$(OBJEXT) \
-	figuredlg.$(OBJEXT) goboard.$(OBJEXT) gogame.$(OBJEXT) \
-	gamedialog.$(OBJEXT) gamestable.$(OBJEXT) gametree.$(OBJEXT) \
-	grid.$(OBJEXT) helpviewer.$(OBJEXT) igsconnection.$(OBJEXT) \
-	imagehandler.$(OBJEXT) main.$(OBJEXT) mainwidget.$(OBJEXT) \
-	clientwin.$(OBJEXT) mainwindow.$(OBJEXT) misc.$(OBJEXT) \
-	msg_handler.$(OBJEXT) parser.$(OBJEXT) playertable.$(OBJEXT) \
-	preferences.$(OBJEXT) qgo.$(OBJEXT) qgo_interface.$(OBJEXT) \
-	qgtp.$(OBJEXT) newaigamedlg.$(OBJEXT) setting.$(OBJEXT) \
-	sgfload.$(OBJEXT) sgf2board.$(OBJEXT) svgbuilder.$(OBJEXT) \
-	tables.$(OBJEXT) telnet.$(OBJEXT) textview.$(OBJEXT) \
-	variantgamedlg.$(OBJEXT)
+am__objects_1 = analyzedlg.$(OBJEXT) audio.$(OBJEXT) board.$(OBJEXT) \
+	clockview.$(OBJEXT) figuredlg.$(OBJEXT) goboard.$(OBJEXT) \
+	gogame.$(OBJEXT) gamedialog.$(OBJEXT) gamestable.$(OBJEXT) \
+	gametree.$(OBJEXT) grid.$(OBJEXT) helpviewer.$(OBJEXT) \
+	igsconnection.$(OBJEXT) imagehandler.$(OBJEXT) main.$(OBJEXT) \
+	mainwidget.$(OBJEXT) clientwin.$(OBJEXT) mainwindow.$(OBJEXT) \
+	misc.$(OBJEXT) msg_handler.$(OBJEXT) parser.$(OBJEXT) \
+	playertable.$(OBJEXT) preferences.$(OBJEXT) qgo.$(OBJEXT) \
+	qgo_interface.$(OBJEXT) qgtp.$(OBJEXT) newaigamedlg.$(OBJEXT) \
+	setting.$(OBJEXT) sgfload.$(OBJEXT) sgf2board.$(OBJEXT) \
+	svgbuilder.$(OBJEXT) tables.$(OBJEXT) telnet.$(OBJEXT) \
+	textview.$(OBJEXT) variantgamedlg.$(OBJEXT)
 am__objects_2 =
 am_q5go_OBJECTS = $(am__objects_1) $(am__objects_2)
-am__objects_3 = audio.moc.$(OBJEXT) bitarray.moc.$(OBJEXT) \
-	board.moc.$(OBJEXT) clockview.moc.$(OBJEXT) \
-	figuredlg.moc.$(OBJEXT) gamedialog.moc.$(OBJEXT) \
-	gamestable.moc.$(OBJEXT) gametree.moc.$(OBJEXT) \
-	helpviewer.moc.$(OBJEXT) icons.moc.$(OBJEXT) \
-	igsconnection.moc.$(OBJEXT) mainwidget.moc.$(OBJEXT) \
-	mainwindow.moc.$(OBJEXT) clientwin.moc.$(OBJEXT) \
-	miscdialogs.moc.$(OBJEXT) misctools.moc.$(OBJEXT) \
+am__objects_3 = analyzedlg.moc.$(OBJEXT) audio.moc.$(OBJEXT) \
+	bitarray.moc.$(OBJEXT) board.moc.$(OBJEXT) \
+	clockview.moc.$(OBJEXT) figuredlg.moc.$(OBJEXT) \
+	gamedialog.moc.$(OBJEXT) gamestable.moc.$(OBJEXT) \
+	gametree.moc.$(OBJEXT) helpviewer.moc.$(OBJEXT) \
+	icons.moc.$(OBJEXT) igsconnection.moc.$(OBJEXT) \
+	mainwidget.moc.$(OBJEXT) mainwindow.moc.$(OBJEXT) \
+	clientwin.moc.$(OBJEXT) miscdialogs.moc.$(OBJEXT) \
+	misctools.moc.$(OBJEXT) msg_handler.moc.$(OBJEXT) \
 	normaltools.moc.$(OBJEXT) scoretools.moc.$(OBJEXT) \
 	parser.moc.$(OBJEXT) playertable.moc.$(OBJEXT) \
 	preferences.moc.$(OBJEXT) qgo.moc.$(OBJEXT) \
@@ -275,18 +276,18 @@ top_srcdir = @top_srcdir@
 INCLUDES = $(all_includes)
 q5go_METASOURCES = AUTO
 KDE_OPTIONS = qtonly
-DISTHEADERS_MOC = audio.h bitarray.h board.h clockview.h figuredlg.h gamedialog.h gamestable.h gametree.h \
+DISTHEADERS_MOC = analyzedlg.h audio.h bitarray.h board.h clockview.h figuredlg.h gamedialog.h gamestable.h gametree.h \
 	helpviewer.h icons.h igsconnection.h mainwidget.h mainwindow.h clientwin.h miscdialogs.h \
-	misctools.h normaltools.h scoretools.h parser.h playertable.h preferences.h qgo.h \
+	misctools.h msg_handler.h normaltools.h scoretools.h parser.h playertable.h preferences.h qgo.h \
 	qgo_interface.h qgtp.h newaigamedlg.h sizegraphicsview.h tables.h telnet.h textview.h \
 	variantgamedlg.h
 
 DISTHEADERS_NOMOC = goboard.h config.h defines.h grid.h goboard.h gogame.h gs_globals.h \
 	igsinterface.h imagehandler.h komispinbox.h mark.h \
-	misc.h msg_handler.h setting.h sgf.h sgfparser.h \
+	misc.h setting.h sgf.h sgfparser.h \
 	svgbuilder.h ui_helpers.h
 
-DISTSOURCES = audio.cpp board.cpp clockview.cpp figuredlg.cpp goboard.cc gogame.cc gamedialog.cpp \
+DISTSOURCES = analyzedlg.cpp audio.cpp board.cpp clockview.cpp figuredlg.cpp goboard.cc gogame.cc gamedialog.cpp \
 		gamestable.cpp gametree.cpp grid.cpp helpviewer.cpp \
 		igsconnection.cpp imagehandler.cpp main.cpp \
 		mainwidget.cpp  clientwin.cpp mainwindow.cpp \
@@ -295,9 +296,10 @@ DISTSOURCES = audio.cpp board.cpp clockview.cpp figuredlg.cpp goboard.cc gogame.
 		newaigamedlg.cpp setting.cpp  sgfload.cc sgf2board.cc \
 		svgbuilder.cpp tables.cpp telnet.cpp textview.cpp variantgamedlg.cpp
 
-FORMS = clientwindow_gui.ui figuredlg_gui.ui gameinfo_gui.ui gui_dialog.ui mainwidget_gui.ui newgame_gui.ui \
-	newlocalgame_gui.ui newvariantgame_gui.ui normaltools_gui.ui nthmove_gui.ui preferences_gui.ui \
-	newaigamedlg_gui.ui scoretools_gui.ui svgview_gui.ui talk_gui.ui textedit_gui.ui textview_gui.ui
+FORMS = analyze_gui.ui clientwindow_gui.ui figuredlg_gui.ui gameinfo_gui.ui gui_dialog.ui mainwidget_gui.ui \
+	newgame_gui.ui newlocalgame_gui.ui newvariantgame_gui.ui normaltools_gui.ui nthmove_gui.ui \
+	preferences_gui.ui newaigamedlg_gui.ui scoretools_gui.ui svgview_gui.ui talk_gui.ui textedit_gui.ui \
+	textview_gui.ui
 
 RESOURCES = q4go.qrc
 FORMHEADERS = $(FORMS:%.ui=ui_%.h)
@@ -398,6 +400,8 @@ mostlyclean-compile:
 distclean-compile:
 	-rm -f *.tab.c
 
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/analyzedlg.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/analyzedlg.moc.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/audio.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/audio.moc.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/bitarray.moc.Po@am__quote@
@@ -433,6 +437,7 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/miscdialogs.moc.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/misctools.moc.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/msg_handler.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/msg_handler.moc.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/newaigamedlg.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/newaigamedlg.moc.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/normaltools.moc.Po@am__quote@
