--- a/src/pics/Makefile.am
+++ b/src/pics/Makefile.am
@@ -5,9 +5,9 @@ Pics_DATA = barcelona_cherry.jpg birch.jpg eurobeech.jpg \
 	goldenbeech.jpg kaya.png lemontree.jpg manitoba.jpg maple.jpg plain.png synthetic_1.png \
 	synthetic_2.png
 noinst_DATA =	Bowl.xpm charset.png charset.xpm  editcut.png \
-		editcut.xpm editdelete.png	editdelete.xpm editpaste.png editpaste.xpm \
+		editcut.xpm editpaste.png editpaste.xpm \
 		filenew.png	filenew.xpm fileopen.png fileopen.xpm filesaveas.png \
-		filesaveas.xpm	filesave.png filesave.xpm help.png help.xpm	idea.png idea.xpm \
+		filesaveas.xpm	filesave.png filesave.xpm help.png help.xpm \
 		newboard.png newboard.xpm openterm.png	openterm.xpm package_settings.png \
 		package_settings.xpm	player_pause.png player_pause.xpm qgo.ico qgo.png qgo.xpm \
 		transform.png transform.xpm \
