--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -309,7 +309,7 @@ CLEANFILES = $(BUILT_SOURCES)
 EXTRA_DIST = $(FORMS)
 q5go_SOURCES = $(DISTSOURCES) $(DISTHEADERS_MOC) $(DISTHEADERS_NO_MOC)
 nodist_q5go_SOURCES = $(MOC_CC) $(RCC_CC)
-SUBDIRS = pics translations sounds
+SUBDIRS = pics translations
 q5go_LDFLAGS = $(all_libraries) $(USER_LDFLAGS)
 q5go_LDADD = $(LIBSOCKET) $(LIB_QPE) $(LIB_QT) $(QT5_LIBS)
 METASOURCES = AUTO
