--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -6,8 +6,8 @@ q5go_METASOURCES = AUTO
 
 KDE_OPTIONS = qtonly
 
-DISTHEADERS_MOC = analyzedlg.h audio.h bitarray.h board.h clockview.h figuredlg.h gamedialog.h gamestable.h gametree.h \
-	helpviewer.h icons.h igsconnection.h mainwindow.h clientwin.h miscdialogs.h \
+DISTHEADERS_MOC = analyzedlg.h audio.h bitarray.h board.h clockview.h evalgraph.h figuredlg.h gamedialog.h \
+	gamestable.h gametree.h helpviewer.h icons.h igsconnection.h mainwindow.h clientwin.h miscdialogs.h \
 	msg_handler.h normaltools.h scoretools.h parser.h playertable.h preferences.h qgo.h \
 	qgo_interface.h qgtp.h newaigamedlg.h sizegraphicsview.h tables.h telnet.h textview.h \
 	variantgamedlg.h
@@ -17,8 +17,8 @@ DISTHEADERS_NOMOC = goboard.h config.h defines.h grid.h goboard.h gogame.h gs_gl
 	misc.h setting.h sgf.h sgfparser.h \
 	svgbuilder.h ui_helpers.h
 
-DISTSOURCES = analyzedlg.cpp audio.cpp board.cpp clockview.cpp figuredlg.cpp goboard.cc gogame.cc gamedialog.cpp \
-		gamestable.cpp gametree.cpp grid.cpp helpviewer.cpp \
+DISTSOURCES = analyzedlg.cpp audio.cpp board.cpp clockview.cpp evalgraph.cpp figuredlg.cpp goboard.cc gogame.cc \
+		gamedialog.cpp gamestable.cpp gametree.cpp grid.cpp helpviewer.cpp \
 		igsconnection.cpp imagehandler.cpp main.cpp \
 		clientwin.cpp mainwindow.cpp \
 		misc.cpp msg_handler.cpp parser.cpp \
