--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -68,34 +68,35 @@ CONFIG_CLEAN_VPATH_FILES =
 am__installdirs = "$(DESTDIR)$(bindir)"
 PROGRAMS = $(bin_PROGRAMS)
 am__objects_1 = analyzedlg.$(OBJEXT) audio.$(OBJEXT) board.$(OBJEXT) \
-	clockview.$(OBJEXT) figuredlg.$(OBJEXT) goboard.$(OBJEXT) \
-	gogame.$(OBJEXT) gamedialog.$(OBJEXT) gamestable.$(OBJEXT) \
-	gametree.$(OBJEXT) grid.$(OBJEXT) helpviewer.$(OBJEXT) \
-	igsconnection.$(OBJEXT) imagehandler.$(OBJEXT) main.$(OBJEXT) \
-	clientwin.$(OBJEXT) mainwindow.$(OBJEXT) misc.$(OBJEXT) \
-	msg_handler.$(OBJEXT) parser.$(OBJEXT) playertable.$(OBJEXT) \
-	preferences.$(OBJEXT) qgo.$(OBJEXT) qgo_interface.$(OBJEXT) \
-	qgtp.$(OBJEXT) newaigamedlg.$(OBJEXT) setting.$(OBJEXT) \
-	sgfload.$(OBJEXT) sgf2board.$(OBJEXT) svgbuilder.$(OBJEXT) \
-	tables.$(OBJEXT) telnet.$(OBJEXT) textview.$(OBJEXT) \
-	variantgamedlg.$(OBJEXT)
+	clockview.$(OBJEXT) evalgraph.$(OBJEXT) figuredlg.$(OBJEXT) \
+	goboard.$(OBJEXT) gogame.$(OBJEXT) gamedialog.$(OBJEXT) \
+	gamestable.$(OBJEXT) gametree.$(OBJEXT) grid.$(OBJEXT) \
+	helpviewer.$(OBJEXT) igsconnection.$(OBJEXT) \
+	imagehandler.$(OBJEXT) main.$(OBJEXT) clientwin.$(OBJEXT) \
+	mainwindow.$(OBJEXT) misc.$(OBJEXT) msg_handler.$(OBJEXT) \
+	parser.$(OBJEXT) playertable.$(OBJEXT) preferences.$(OBJEXT) \
+	qgo.$(OBJEXT) qgo_interface.$(OBJEXT) qgtp.$(OBJEXT) \
+	newaigamedlg.$(OBJEXT) setting.$(OBJEXT) sgfload.$(OBJEXT) \
+	sgf2board.$(OBJEXT) svgbuilder.$(OBJEXT) tables.$(OBJEXT) \
+	telnet.$(OBJEXT) textview.$(OBJEXT) variantgamedlg.$(OBJEXT)
 am__objects_2 =
 am_q5go_OBJECTS = $(am__objects_1) $(am__objects_2)
 am__objects_3 = analyzedlg.moc.$(OBJEXT) audio.moc.$(OBJEXT) \
 	bitarray.moc.$(OBJEXT) board.moc.$(OBJEXT) \
-	clockview.moc.$(OBJEXT) figuredlg.moc.$(OBJEXT) \
-	gamedialog.moc.$(OBJEXT) gamestable.moc.$(OBJEXT) \
-	gametree.moc.$(OBJEXT) helpviewer.moc.$(OBJEXT) \
-	icons.moc.$(OBJEXT) igsconnection.moc.$(OBJEXT) \
-	mainwindow.moc.$(OBJEXT) clientwin.moc.$(OBJEXT) \
-	miscdialogs.moc.$(OBJEXT) msg_handler.moc.$(OBJEXT) \
-	normaltools.moc.$(OBJEXT) scoretools.moc.$(OBJEXT) \
-	parser.moc.$(OBJEXT) playertable.moc.$(OBJEXT) \
-	preferences.moc.$(OBJEXT) qgo.moc.$(OBJEXT) \
-	qgo_interface.moc.$(OBJEXT) qgtp.moc.$(OBJEXT) \
-	newaigamedlg.moc.$(OBJEXT) sizegraphicsview.moc.$(OBJEXT) \
-	tables.moc.$(OBJEXT) telnet.moc.$(OBJEXT) \
-	textview.moc.$(OBJEXT) variantgamedlg.moc.$(OBJEXT)
+	clockview.moc.$(OBJEXT) evalgraph.moc.$(OBJEXT) \
+	figuredlg.moc.$(OBJEXT) gamedialog.moc.$(OBJEXT) \
+	gamestable.moc.$(OBJEXT) gametree.moc.$(OBJEXT) \
+	helpviewer.moc.$(OBJEXT) icons.moc.$(OBJEXT) \
+	igsconnection.moc.$(OBJEXT) mainwindow.moc.$(OBJEXT) \
+	clientwin.moc.$(OBJEXT) miscdialogs.moc.$(OBJEXT) \
+	msg_handler.moc.$(OBJEXT) normaltools.moc.$(OBJEXT) \
+	scoretools.moc.$(OBJEXT) parser.moc.$(OBJEXT) \
+	playertable.moc.$(OBJEXT) preferences.moc.$(OBJEXT) \
+	qgo.moc.$(OBJEXT) qgo_interface.moc.$(OBJEXT) \
+	qgtp.moc.$(OBJEXT) newaigamedlg.moc.$(OBJEXT) \
+	sizegraphicsview.moc.$(OBJEXT) tables.moc.$(OBJEXT) \
+	telnet.moc.$(OBJEXT) textview.moc.$(OBJEXT) \
+	variantgamedlg.moc.$(OBJEXT)
 am__objects_4 = $(am__objects_2) $(am__objects_3)
 am__objects_5 = q4go.rcc.$(OBJEXT)
 am__objects_6 = $(am__objects_5)
@@ -275,8 +276,8 @@ top_srcdir = @top_srcdir@
 INCLUDES = $(all_includes)
 q5go_METASOURCES = AUTO
 KDE_OPTIONS = qtonly
-DISTHEADERS_MOC = analyzedlg.h audio.h bitarray.h board.h clockview.h figuredlg.h gamedialog.h gamestable.h gametree.h \
-	helpviewer.h icons.h igsconnection.h mainwindow.h clientwin.h miscdialogs.h \
+DISTHEADERS_MOC = analyzedlg.h audio.h bitarray.h board.h clockview.h evalgraph.h figuredlg.h gamedialog.h \
+	gamestable.h gametree.h helpviewer.h icons.h igsconnection.h mainwindow.h clientwin.h miscdialogs.h \
 	msg_handler.h normaltools.h scoretools.h parser.h playertable.h preferences.h qgo.h \
 	qgo_interface.h qgtp.h newaigamedlg.h sizegraphicsview.h tables.h telnet.h textview.h \
 	variantgamedlg.h
@@ -286,8 +287,8 @@ DISTHEADERS_NOMOC = goboard.h config.h defines.h grid.h goboard.h gogame.h gs_gl
 	misc.h setting.h sgf.h sgfparser.h \
 	svgbuilder.h ui_helpers.h
 
-DISTSOURCES = analyzedlg.cpp audio.cpp board.cpp clockview.cpp figuredlg.cpp goboard.cc gogame.cc gamedialog.cpp \
-		gamestable.cpp gametree.cpp grid.cpp helpviewer.cpp \
+DISTSOURCES = analyzedlg.cpp audio.cpp board.cpp clockview.cpp evalgraph.cpp figuredlg.cpp goboard.cc gogame.cc \
+		gamedialog.cpp gamestable.cpp gametree.cpp grid.cpp helpviewer.cpp \
 		igsconnection.cpp imagehandler.cpp main.cpp \
 		clientwin.cpp mainwindow.cpp \
 		misc.cpp msg_handler.cpp parser.cpp \
@@ -410,6 +411,8 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/clientwin.moc.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/clockview.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/clockview.moc.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/evalgraph.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/evalgraph.moc.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/figuredlg.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/figuredlg.moc.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/gamedialog.Po@am__quote@
