Make an "automatic diagrams" dialog

--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -67,36 +67,37 @@ CONFIG_CLEAN_FILES =
 CONFIG_CLEAN_VPATH_FILES =
 am__installdirs = "$(DESTDIR)$(bindir)"
 PROGRAMS = $(bin_PROGRAMS)
-am__objects_1 = analyzedlg.$(OBJEXT) audio.$(OBJEXT) board.$(OBJEXT) \
-	clockview.$(OBJEXT) evalgraph.$(OBJEXT) figuredlg.$(OBJEXT) \
-	goboard.$(OBJEXT) gogame.$(OBJEXT) gamedialog.$(OBJEXT) \
-	gamestable.$(OBJEXT) gametree.$(OBJEXT) grid.$(OBJEXT) \
-	helpviewer.$(OBJEXT) igsconnection.$(OBJEXT) \
-	imagehandler.$(OBJEXT) main.$(OBJEXT) clientwin.$(OBJEXT) \
-	mainwindow.$(OBJEXT) misc.$(OBJEXT) msg_handler.$(OBJEXT) \
-	parser.$(OBJEXT) playertable.$(OBJEXT) preferences.$(OBJEXT) \
-	qgo.$(OBJEXT) qgo_interface.$(OBJEXT) qgtp.$(OBJEXT) \
-	newaigamedlg.$(OBJEXT) setting.$(OBJEXT) sgfload.$(OBJEXT) \
-	sgf2board.$(OBJEXT) svgbuilder.$(OBJEXT) tables.$(OBJEXT) \
-	telnet.$(OBJEXT) textview.$(OBJEXT) variantgamedlg.$(OBJEXT)
+am__objects_1 = analyzedlg.$(OBJEXT) audio.$(OBJEXT) \
+	autodiagsdlg.$(OBJEXT) board.$(OBJEXT) clockview.$(OBJEXT) \
+	evalgraph.$(OBJEXT) figuredlg.$(OBJEXT) goboard.$(OBJEXT) \
+	gogame.$(OBJEXT) gamedialog.$(OBJEXT) gamestable.$(OBJEXT) \
+	gametree.$(OBJEXT) grid.$(OBJEXT) helpviewer.$(OBJEXT) \
+	igsconnection.$(OBJEXT) imagehandler.$(OBJEXT) main.$(OBJEXT) \
+	clientwin.$(OBJEXT) mainwindow.$(OBJEXT) misc.$(OBJEXT) \
+	msg_handler.$(OBJEXT) parser.$(OBJEXT) playertable.$(OBJEXT) \
+	preferences.$(OBJEXT) qgo.$(OBJEXT) qgo_interface.$(OBJEXT) \
+	qgtp.$(OBJEXT) newaigamedlg.$(OBJEXT) setting.$(OBJEXT) \
+	sgfload.$(OBJEXT) sgf2board.$(OBJEXT) svgbuilder.$(OBJEXT) \
+	tables.$(OBJEXT) telnet.$(OBJEXT) textview.$(OBJEXT) \
+	variantgamedlg.$(OBJEXT)
 am__objects_2 =
 am_q5go_OBJECTS = $(am__objects_1) $(am__objects_2)
 am__objects_3 = analyzedlg.moc.$(OBJEXT) audio.moc.$(OBJEXT) \
-	bitarray.moc.$(OBJEXT) board.moc.$(OBJEXT) \
-	clockview.moc.$(OBJEXT) evalgraph.moc.$(OBJEXT) \
-	figuredlg.moc.$(OBJEXT) gamedialog.moc.$(OBJEXT) \
-	gamestable.moc.$(OBJEXT) gametree.moc.$(OBJEXT) \
-	helpviewer.moc.$(OBJEXT) icons.moc.$(OBJEXT) \
-	igsconnection.moc.$(OBJEXT) mainwindow.moc.$(OBJEXT) \
-	clientwin.moc.$(OBJEXT) miscdialogs.moc.$(OBJEXT) \
-	msg_handler.moc.$(OBJEXT) normaltools.moc.$(OBJEXT) \
-	scoretools.moc.$(OBJEXT) parser.moc.$(OBJEXT) \
-	playertable.moc.$(OBJEXT) preferences.moc.$(OBJEXT) \
-	qgo.moc.$(OBJEXT) qgo_interface.moc.$(OBJEXT) \
-	qgtp.moc.$(OBJEXT) newaigamedlg.moc.$(OBJEXT) \
-	sizegraphicsview.moc.$(OBJEXT) tables.moc.$(OBJEXT) \
-	telnet.moc.$(OBJEXT) textview.moc.$(OBJEXT) \
-	variantgamedlg.moc.$(OBJEXT)
+	autodiagsdlg.moc.$(OBJEXT) bitarray.moc.$(OBJEXT) \
+	board.moc.$(OBJEXT) clockview.moc.$(OBJEXT) \
+	evalgraph.moc.$(OBJEXT) figuredlg.moc.$(OBJEXT) \
+	gamedialog.moc.$(OBJEXT) gamestable.moc.$(OBJEXT) \
+	gametree.moc.$(OBJEXT) helpviewer.moc.$(OBJEXT) \
+	icons.moc.$(OBJEXT) igsconnection.moc.$(OBJEXT) \
+	mainwindow.moc.$(OBJEXT) clientwin.moc.$(OBJEXT) \
+	miscdialogs.moc.$(OBJEXT) msg_handler.moc.$(OBJEXT) \
+	normaltools.moc.$(OBJEXT) scoretools.moc.$(OBJEXT) \
+	parser.moc.$(OBJEXT) playertable.moc.$(OBJEXT) \
+	preferences.moc.$(OBJEXT) qgo.moc.$(OBJEXT) \
+	qgo_interface.moc.$(OBJEXT) qgtp.moc.$(OBJEXT) \
+	newaigamedlg.moc.$(OBJEXT) sizegraphicsview.moc.$(OBJEXT) \
+	tables.moc.$(OBJEXT) telnet.moc.$(OBJEXT) \
+	textview.moc.$(OBJEXT) variantgamedlg.moc.$(OBJEXT)
 am__objects_4 = $(am__objects_2) $(am__objects_3)
 am__objects_5 = q4go.rcc.$(OBJEXT)
 am__objects_6 = $(am__objects_5)
@@ -276,30 +277,30 @@ top_srcdir = @top_srcdir@
 INCLUDES = $(all_includes)
 q5go_METASOURCES = AUTO
 KDE_OPTIONS = qtonly
-DISTHEADERS_MOC = analyzedlg.h audio.h bitarray.h board.h clockview.h evalgraph.h figuredlg.h gamedialog.h \
-	gamestable.h gametree.h helpviewer.h icons.h igsconnection.h mainwindow.h clientwin.h miscdialogs.h \
-	msg_handler.h normaltools.h scoretools.h parser.h playertable.h preferences.h qgo.h \
-	qgo_interface.h qgtp.h newaigamedlg.h sizegraphicsview.h tables.h telnet.h textview.h \
-	variantgamedlg.h
+DISTHEADERS_MOC = analyzedlg.h audio.h autodiagsdlg.h bitarray.h board.h clockview.h evalgraph.h \
+	figuredlg.h gamedialog.h gamestable.h gametree.h helpviewer.h icons.h igsconnection.h \
+	mainwindow.h clientwin.h miscdialogs.h msg_handler.h normaltools.h scoretools.h parser.h \
+	playertable.h preferences.h qgo.h qgo_interface.h qgtp.h newaigamedlg.h sizegraphicsview.h \
+	tables.h telnet.h textview.h variantgamedlg.h
 
 DISTHEADERS_NOMOC = goboard.h config.h defines.h grid.h goboard.h gogame.h gs_globals.h \
 	igsinterface.h imagehandler.h komispinbox.h mark.h \
 	misc.h setting.h sgf.h sgfparser.h \
 	svgbuilder.h ui_helpers.h
 
-DISTSOURCES = analyzedlg.cpp audio.cpp board.cpp clockview.cpp evalgraph.cpp figuredlg.cpp goboard.cc gogame.cc \
-		gamedialog.cpp gamestable.cpp gametree.cpp grid.cpp helpviewer.cpp \
-		igsconnection.cpp imagehandler.cpp main.cpp \
+DISTSOURCES = analyzedlg.cpp audio.cpp autodiagsdlg.cpp board.cpp clockview.cpp evalgraph.cpp \
+		figuredlg.cpp goboard.cc gogame.cc gamedialog.cpp gamestable.cpp gametree.cpp grid.cpp \
+		helpviewer.cpp igsconnection.cpp imagehandler.cpp main.cpp \
 		clientwin.cpp mainwindow.cpp \
 		misc.cpp msg_handler.cpp parser.cpp \
 		playertable.cpp preferences.cpp qgo.cpp qgo_interface.cpp qgtp.cpp \
 		newaigamedlg.cpp setting.cpp  sgfload.cc sgf2board.cc \
 		svgbuilder.cpp tables.cpp telnet.cpp textview.cpp variantgamedlg.cpp
 
-FORMS = analyze_gui.ui boardwindow_gui.ui clientwindow_gui.ui figuredlg_gui.ui gameinfo_gui.ui gui_dialog.ui \
-	newgame_gui.ui newlocalgame_gui.ui newvariantgame_gui.ui normaltools_gui.ui nthmove_gui.ui \
-	preferences_gui.ui newaigamedlg_gui.ui scoretools_gui.ui svgview_gui.ui talk_gui.ui textedit_gui.ui \
-	textview_gui.ui
+FORMS = analyze_gui.ui autodiags_gui.ui boardwindow_gui.ui clientwindow_gui.ui figuredlg_gui.ui \
+	gameinfo_gui.ui gui_dialog.ui newgame_gui.ui newlocalgame_gui.ui newvariantgame_gui.ui \
+	normaltools_gui.ui nthmove_gui.ui preferences_gui.ui newaigamedlg_gui.ui scoretools_gui.ui \
+	svgview_gui.ui talk_gui.ui textedit_gui.ui textview_gui.ui
 
 RESOURCES = q4go.qrc
 FORMHEADERS = $(FORMS:%.ui=ui_%.h)
@@ -404,6 +405,8 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/analyzedlg.moc.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/audio.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/audio.moc.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/autodiagsdlg.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/autodiagsdlg.moc.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/bitarray.moc.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/board.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/board.moc.Po@am__quote@
